@@ -30,7 +30,7 @@ no_index:
 requires:
   Class::Utils: 0
   Error::Pure: 0
-  List::MoreUtils: 0
+  List::Util: 1.33
   Tags::HTML: 0.06
   Tags::HTML::Element::A: 0
   perl: 5.8.0
