@@ -20,7 +20,7 @@ readme_from 'View.pm';
 recursive_author_tests('xt');
 requires 'Class::Utils' => 0;
 requires 'Error::Pure' => 0;
-requires 'List::MoreUtils' => 0;
+requires 'List::Util' => 1.33;
 requires 'Tags::HTML' => 0.06;
 requires 'Tags::HTML::Element::A' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Tags-HTML-Table-View/issues';
