@@ -346,7 +346,7 @@ EXAMPLE3
      # </body>
 
 DEPENDENCIES
-    Class::Utils, Error::Pure, List::MoreUtils, Scalar::Util, Tags::HTML.
+    Class::Utils, Error::Pure, List::Util, Scalar::Util, Tags::HTML.
 
 REPOSITORY
     <https://github.com/michal-josef-spacek/Tags-HTML-Table-View>
