@@ -1,6 +1,7 @@
 0.07
  - Add test for no table data without 'no_data' message.
  - Remove obsolete code.
+ - Rewrite from List::MoreUtils to List::Util.
 
 0.06 2024-04-21T17:26:14+02:00
  - Fix of setting of table data. Copy in this time.
